Fix rooms list overflowing on tab nav

--- a/client/src/components/Fab/Fab.scoped.scss
+++ b/client/src/components/Fab/Fab.scoped.scss
@@ -26,6 +26,7 @@ button.fab {
   bottom: 30px;
   right: 30px;
   font-size: 2.3rem;
+  z-index: 15;
   padding: 0;
   white-space: nowrap;
 
